2002-05-20  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/alpha/pt-machine.c (THREAD_SELF): Remove clobber.
	Patch by Glen Nakamura <gen@flex.com>.

2002-05-03  Ulrich Drepper  <drepper@redhat.com>

	* signals.c: Move sighandler functions to...
	* sighandler.c: ...here.  New file.
	* signals.c: Move signal handler related type definitions to...
	* internals.h: ...here.  Add prototypes for signal handlers.
	* Makefile (libpthread-routines): Add sighandler.
	(CFLAGS-sighandler.c): Add $(exceptions).

2002-04-30  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/x86_64/Makefile: New file.

2002-04-08  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/pthread/timer_getoverr.c: Return real overrun.
	* sysdeps/pthread/posix-timer.h (struct timer_node): Add overrun_count.
	* sysdeps/pthread/timer_routines.c (thread_func): Schedule next timeout
	based on previous one and not on current time.  Count overruns.
	Patch by Eric F. Sorton <eric@cctcorp.com>.

	* sysdeps/unix/sysv/linux/bits/local_lim.h: Add DELAYTIMER_MAX.

2002-04-08  kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* sysdeps/sh/pt-machine.h: Define _PT_MACHINE_H
	if it isn't defined yet.
	(FLOATING_STACKS, ARCH_STACK_MAX_SIZE): Defined.
	(THREAD_GETMEM, THREAD_GETMEM_NC, THREAD_SETMEM, THREAD_SETMEM_NC):
	Likewise.
	* sysdeps/sh/tls.h: New file.

2002-04-08  Jakub Jelinek  <jakub@redhat.com>

	* manager.c (__pthread_manager_event): Use self instead of arg
	for INIT_THREAD_SELF.
	* sysdeps/i386/useldt.h (INIT_THREAD_SELF): Use sizeof (struct
	_pthread_descr_struct) instead of sizeof (*descr).

2002-04-05  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/ia64/pt-machine.h: Protect against multiple inclusion.
	* sysdeps/alpha/pt-machine.h: Likewise.
	* sysdeps/arm/pt-machine.h: Likewise.
	* sysdeps/cris/pt-machine.h: Likewise.
	* sysdeps/hppa/pt-machine.h: Likewise.
	* sysdeps/m68k/pt-machine.h: Likewise.
	* sysdeps/mips/pt-machine.h: Likewise.
	* sysdeps/powerpc/pt-machine.h: Likewise.